--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Space Asteroid Arcade Shooter.x86_64"
+export_path="exports/Space Asteroid Arcade Shooter.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -33,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Space Asteroid Arcade Shooter.zip"
+export_path="exports/Space Asteroid Arcade Shooter.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -79,3 +79,45 @@ html/custom_html_shell=""
 html/head_include=""
 custom_template/release=""
 custom_template/debug=""
+
+[preset.3]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="exports/Space Asteroid Arcade Shooter.exe"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+binary_format/embed_pck=false
+custom_template/release=""
+custom_template/debug=""
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
